Adds a footnote linking DreamSpark, fixes some misrendered quotation marks.

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -132,7 +132,7 @@ Hierbij staat de tekst `string, cijfer, of nog iets anders' schuingedrukt, omdat
 		\item
 			Schrijf nu alleen de tekst "How are you?" naar de console in plaats van "Mijn leeftijd is".
 		\item 
-			\textbf{Verplichte opdracht:} Verander alle dubbele pijltjes \icode{<<} nu naar een enkel pijltje \icode{<} en voer het programma uit. Je zult zien dat er geen "How are you" in de console komt te staan. In plaats daarvan krijgen we een foutmelding te zien. Aangezien je nog wel veel vaker een fout zult maken en foutmeldingen tegen zult komen, is het handig om deze te leren lezen. Op de tweede regel van de console staat nu:\\
+			\textbf{Verplichte opdracht:} Verander alle dubbele pijltjes \icode{<<} nu naar een enkel pijltje \icode{<} en voer het programma uit. Je zult zien dat er geen ``How are you'' in de console komt te staan. In plaats daarvan krijgen we een foutmelding te zien. Aangezien je nog wel veel vaker een fout zult maken en foutmeldingen tegen zult komen, is het handig om deze te leren lezen. Op de tweede regel van de console staat nu:\\
 \mono{/home/ubuntu/workspace/hallo.cpp: In function ‘int main()’:}\\
 Hier staat dat er in de main functie van het programma hallo.cpp een fout is opgetreden. Aangezien ons programma alleen uit een main functie bestaat komen we hier nog niet erg verder mee. Als je naar de volgende regel kijkt staat er waarschijnlijk iets als:\\
 \mono{/home/ubuntu/workspace/hallo.cc:7:29: error: invalid operands of types ‘bool’ and ‘<unresolved overloaded function type>’ to binary ‘operator<'\\
@@ -141,9 +141,9 @@ Hierbij duiden de getallen 7 en 29 na hallo.cpp respectievelijk het regelnummer 
 		\item
 			In plaats van twee dingen op \'e\'en regel weg te schrijven, kunnen we ook twee regels gebruiken. Verander je code naar de twee regels \icode{cout << "How are you?";} en \icode{cout << endl;}. Je ziet dat er nog steeds het zelfde gebeurt als je het programma uitvoert.
 		\item
-			Zorg nu dat het programma twee keer "How are you?" zegt, op twee regels onder elkaar.
+			Zorg nu dat het programma twee keer ``How are you?'' zegt, op twee regels onder elkaar.
 		\item
-			Kan je er ook voor zorgen dat er op \'e\'en regel twee keer "How are you" komt te staan.
+			Kan je er ook voor zorgen dat er op \'e\'en regel twee keer ``How are you'' komt te staan.
 		\item
 			Print nu de lijst getallen van 1 tot en met 5, waarbij elk getal op zijn eigen regel staat.
 		\item
@@ -315,7 +315,7 @@ In twee uur kunnen we je helaas niet alles leren wat er te leren valt over \cpp,
 				\item 
 					\url{http://cplusplus.com}, een andere documentatie, probeer ze allebei, en kijk welke je fijner vindt.
 	\end{enumerate}
-	\item Als je een compiler wilt installeren op een Windows computer dan zijn handige alternatieven: Code::Blocks en Visual Studio Express 2013 for Windows Desktop. Er zijn van Visual Studio ook gratis versies voor studenten.
+	\item Als je een compiler wilt installeren op een Windows computer dan zijn handige alternatieven: Code::Blocks en Visual Studio Express 2013 for Windows Desktop. Er zijn van Visual Studio ook gratis versies voor studenten\footnote{Deze is verkrijgbaar via DreamSpark: ga naar \url{students.uu.nl/en/free-software} en klik ``Microsoft Software''.}.
 	\item Als je twijfelt of je berekeningen goed gaan kan het handig zijn om als tussenstappen de waarde van een variabele te printen met \icode{cout}. Er is ook nog \icode{cerr}, wat speciaal gemaakt is voor errors, maar verder op precies dezelfde manier gebruikt wordt.
 	\item Als het je leuk lijkt om een programmeervak te gaan volgen, kun je eens naar deze vakken gaan kijken: bij natuurkunde `Numerieke Methoden' (C en Mathematica), bij wiskunde `Programmeren in de wiskunde' (Python) en bij informatica `Imperatief programmeren' (C\#, eerstejaarsvak, dus goed te doen voor natuurkundigen ook!). Geen van deze vakken wordt in \cpp gegeven, maar ze worden wel in soortgelijke talen gegeven. Als je eenmaal in een taal kunt programmeren is het heel makkelijk om over te stappen naar een andere taal, dus ook deze vakken kunnen je uiteindelijk zeker helpen om beter te worden in \cpp. 
 	\item We hebben express te veel opdrachten gemaakt voor vandaag, dus niet getreurd, je kunt thuis gewoon verder gaan met oefenen! Daarnaast zijn er op het internet ook heel veel beginnersopdrachten in \cpp te vinden, zoals op: \url{http://www.worldbestlearningcenter.com/index_files/cpp-tutorial-variables_datatypes_exercises.htm}.
