Adds a new exercise about for-loops.

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -276,6 +276,8 @@ Als je dit intikt en uitvoert, zie je dat er eerst drie keer 'hoera' wordt gesch
 \begin{enumerate}
 	\item
 		Print nu 5 keer \icode{"hoera"} op een nieuwe regel.
+    \item 
+        Print nu alle getallen van 0 tot en met 10 \textit{van groot naar klein}.
 	\item
 		Schrijf nu alleen de even getallen tot en met 10 op.
 \end{enumerate}
