added bonus exercise about 'continue'

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -279,7 +279,12 @@ Als je dit intikt en uitvoert, zie je dat er eerst drie keer 'hoera' wordt gesch
     \item 
         Print nu alle getallen van 0 tot en met 10 \textit{van groot naar klein}.
 	\item
+		Doe nu hetzelfde, maar sla dan het getal 3 over. Dit kan je doen met een \icode{if}-statement.
+	\item
 		Schrijf nu alleen de even getallen tot en met 10 op.
+	\item[Bonus] 
+		Je kan een getal ook overslaan door \icode{continue} te gebruiken.
+		Probeer eens op te zoeken hoe dit werkt, en pas het toe.
 \end{enumerate}
 
 \clearpage
