added exercise: review the code from the introduction

--- a/tutorial.tex
+++ b/tutorial.tex
@@ -284,7 +284,9 @@ Als je dit intikt en uitvoert, zie je dat er eerst drie keer 'hoera' wordt gesch
 		Schrijf nu alleen de even getallen tot en met 10 op.
 	\item[Bonus] 
 		Je kan een getal ook overslaan door \icode{continue} te gebruiken.
-		Probeer eens op te zoeken hoe dit werkt, en pas het toe.
+		Probeer eens op internet op te zoeken hoe dit werkt, en pas het toe.
+	\item
+		Bekijk nog eens de code uit de inleiding, en probeer te achterhalen wat het doet en hoe het werkt.
 \end{enumerate}
 
 \clearpage
